@@ -27,7 +27,7 @@ macro(MACRO_OPTIONAL_ADD_BINDINGS _component_found _component_name)
     else(${_component_found} AND NOT DISABLE_${_component_name})
         list(APPEND ${_PREFIX}_DISABLED ${_component_name})
     endif(${_component_found} AND NOT DISABLE_${_component_name})
-    unset(_PREFIX)
+    set(_PREFIX)
 endmacro(MACRO_OPTIONAL_ADD_BINDINGS)
 
 # Show bindings summary
@@ -43,5 +43,5 @@ macro(MACRO_DISPLAY_BINDINGS_LOG)
     endif (${_PREFIX}_DISABLED)
     message(STATUS "Build ${_PREFIX} bindings: ${${_PREFIX}_ENABLED}")
     message(STATUS "Skip ${_PREFIX} bindings: ${${_PREFIX}_DISABLED}")
-    unset(_PREFIX)
+    set(_PREFIX)
 endmacro(MACRO_DISPLAY_BINDINGS_LOG)
