@@ -9,6 +9,7 @@ add_subdirectory(smokeapi)
 
 macro_optional_add_bindings(QT_QTNETWORK_FOUND "QtNetwork" qtnetwork)
 macro_optional_add_bindings(QT_QTDBUS_FOUND "QtDBus" qtdbus)
+macro_optional_add_bindings(QT_QTDECLARATIVE_FOUND "QtDeclarative" qtdeclarative)
 macro_optional_add_bindings(QT_QTGUI_FOUND "QtGui" qtgui)
 macro_optional_add_bindings(QT_QTSVG_FOUND "QtSvg" qtsvg)
 macro_optional_add_bindings(QT_QTSQL_FOUND "QtSql" qtsql)
