@@ -1,0 +1,12 @@
+<config>
+    <resolveTypedefs>true</resolveTypedefs>
+    <qtMode>true</qtMode>
+    <generator>smoke</generator>
+    <definesList>@CMAKE_BINARY_DIR@/smoke/qtdefines</definesList>
+    <includeDirs>
+        <dir>@QT_INCLUDE_DIR@</dir>
+        <dir>@QT_QTCORE_INCLUDE_DIR@</dir>
+        <dir>@QT_QTGUI_INCLUDE_DIR@</dir>
+        <dir>@QT_QTDECLARATIVE_INCLUDE_DIR@</dir>
+    </includeDirs>
+</config>
