@@ -1,3 +1,3 @@
 #include <QtCore>
 #include <QtGui>
-#include <QtSql>
+#include <QtDeclarative>
